--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,11 @@
 
 {% block content %}
     <h1>{% block title %} Polar Robotics Web Interface {% endblock %}</h1>
-    <button><a href="./return.html">Run Flask Program</a></button>
-{% endblock %}
+    {% for program in programs %}
+    <a href="{{ url_for('program', program_id=program['id']) }}">
+        <button>{{ program['title'] }}</button>
+    </a>
+    <span class="badge badge-primary">{{ programs['created'] }}</span>
+    <hr>
+    {% endfor %}
+{% endblock %} 
