--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -39,7 +39,7 @@ a {
 }
 
 button, input[type="submit"] {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -53,7 +53,7 @@ button, input[type="submit"] {
 
 form input[type="text"] {
     width: 25%;
-    padding: 12px 20px;
+    padding: 4px 20px;
     margin: 8px 0;
     box-sizing: border-box;
     border: 3px solid #ccc;
@@ -69,12 +69,14 @@ form input[type="text"]:focus {
 nav {
     display: flex;
     justify-content: flex-start;
-    padding: 15px;
+    padding: 10px;
     background-color: orange;
 }
 
 nav a {
-    color: white;
+    color: black;
+    border: 2px solid #000000;
+    padding: 5px;
     text-decoration: none;
-    margin-right: 10px;
+    margin-right: 15px;
 }
