Separated JavaScript from HTML file

--- a/templates/serialmonitor.html
+++ b/templates/serialmonitor.html
@@ -16,41 +16,7 @@
         <input type="submit" name="stop_button" value="Stop Program">
         <input type="hidden" name="action" id="action">
     </form> 
-    <script>
-        $(document).ready(function() {
-            $('input[name="start_button"]').click(function(e) {
-                e.preventDefault();
-                $('#action').val('start');
-                $('#loopForm').submit();
-            });
-
-            $('input[name="stop_button"]').click(function(e) {
-                e.preventDefault();
-                $('#action').val('stop');
-                $('#loopForm').submit();
-            });
-            
-            $('#loopForm').submit(function(event) {
-                event.preventDefault();
-                
-                var url = '/start_serial_monitor';
-                var formData = $(this).serialize();
-                console.log(formData);
-        
-                $.ajax({
-                    type: 'POST',
-                    url: url,
-                    data: formData,
-                    success: function(response) {
-                        console.log(response);
-                    },
-                    error: function(error) {
-                        console.log(error);
-                    }
-                });
-            });
-        });
-    </script>
+    <script src="/static/js/serialmonitorform.js"></script>
     <h2>CSV</h2>
     <a href="/">
         <button>Download CSV File</button>
