Added a lot of comments and documentation

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="/static/css/styles.css">
       <!-- jQuery -->
       <script src="/static/js/jquery.min.js"></script>
-      <header style="background-color: chocolate; padding: 10px;">
+      <header>
         <img id="favicon" src="/static/favicon.ico" alt="Favicon">
         <h1>Polar Robotics Web Interface</h1>
       </header>
