--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,8 +9,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px;
-    background-color: #f0f0f0;
+    padding: 10px;
+    background-color: chocolate;
 }
 
 #favicon {
