--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
         <nav>
             <a href="/">Home</a>
             <a href="/serial_monitor">Serial Monitor</a>
+            <a href="/file_manager">File Manager</a>
+            <a href="/graphing">Graphing</a>
         </nav>
     </head>
     <body>
