Added some intro text.

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
 {% block content %}
     <br>
     <h1>Welcome to the Polar Robotics Web Interface!</h1>
-    <a>This database</a>
+    <a>This is a handy web interface used to interface with ESP32s using Raspberry Pis in our robots.<br>
+        - Corbin</a>
     <h2>Programs</h2>
     <a href="serial_monitor">
         <button>Serial Monitor to CSV</button>
