Cleaned up CSV routing, proper file manager routing now supported

--- a/templates/serial-monitor.html
+++ b/templates/serial-monitor.html
@@ -7,6 +7,10 @@
 {% block content %}
     <h2>Serial Monitor to CSV</h2><!--Page header-->
     <!--Form to start/stop serial monitor and give CSV file output-->
+    Output directly into a folder is supported, however you must<br>
+    make sure the folder exists first in the File Manager.<br><br>
+    Ex1. RhoTests/Test1<br>
+    Ex2. Test170<br>
     <form id="loopForm">
         <div2>
             <!--CSV filename input field-->
