--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,9 @@
         <script src="/static/js/jquery.min.js"></script>
         <header>
             <img id="favicon" src="/static/favicon.ico" alt="Favicon">
-            <h1>Polar Robotics Web Interface</h1>
+            <h1>POLAR ROBOTICS WEB INTERFACE</h1>
         </header>
+        <title>{% block title %}{% endblock %}</title>
         <nav>
             <a href="/">Home</a>
             <a href="/serial_monitor">Serial Monitor</a>
