--- a/templates/graphing.html
+++ b/templates/graphing.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block title %}
+    Graphing
+{% endblock %}
 
+{% block content %}
+    Soon to be implemented! If you see this, be sure to bug Corbin about it.
 {% endblock %}
