--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    Polar Robotics Web Interface
+{% endblock %}
+
 {% block content %}
     <br>
     <h1>Welcome to the Polar Robotics Web Interface!</h1>
-    <a>This is a handy web interface used to interface with ESP32s using Raspberry Pis in our robots.<br>
-        - Corbin</a>
+    This is a handy web interface used to interface with ESP32s using Raspberry Pis in our robots.<br>
+        - Corbin
     <h2>Programs</h2>
     <a href="serial_monitor">
         <button>Serial Monitor to CSV</button>
