--- a/templates/file-manager.html
+++ b/templates/file-manager.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    File Manager
+{% endblock %}
+
 {% block content %}
 <iframe src="{{ filemanager_link }}" width="100%" height="500px"></iframe>
 {% endblock %}
