--- a/templates/serial-monitor.html
+++ b/templates/serial-monitor.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Serial Monitor to CSV</h2><!--Page header-->
+    <hr><h2>Serial Monitor to CSV</h2>
     <!--Form to start/stop serial monitor and give CSV file output-->
     Output directly into a folder is supported, however you must<br>
     make sure the folder exists first in the File Manager.<br><br>
@@ -24,12 +24,14 @@
     </form>
     <!--Link to JavaScript to process above form and run SerialMonitor.py (VERY IMPORTANT)-->
     <script src="/static/js/serialMonitorForm.js"></script>
-    <h3>Program Status</h3>
-        <label id="programStatus">Program not running.</label><br>
-        <label id="savedCsvName"></label>
+    <hr><h3>PROGRAM STATUS</h3>
+    <label id="programStatus">
+        Program not running.<br>
+    </label>
+    <label id="savedCsvName"></label>
     
     <!--Header for CSV management section-->
-    <h2>CSV</h2>
+    <hr><h2>CSV</h2>
     <!--Button to download the CSV file-->
     <form id="csvForm" action="/download_csv" method="POST">
         <div2>
